Fixed problem that makes button to overflow on home page

--- a/drupal/sites/all/themes/nurani/css/core.css
+++ b/drupal/sites/all/themes/nurani/css/core.css
@@ -58,7 +58,7 @@ h1 {
 
 /* line 50, ../scss/_typography.scss */
 h2 {
-  font-size: 2.1429em;
+  font-size: 1.3em;
   /* 30px */
   line-height: 0.7333em;
   /* 52px */
@@ -211,7 +211,6 @@ sup {
 }
 /* line 12, ../scss/_comments.scss */
 .comment-inner .content {
-  margin-left: 4em;
   color: #4a4a4a;
 }
 /* line 15, ../scss/_comments.scss */
@@ -226,7 +225,6 @@ sup {
 }
 /* line 21, ../scss/_comments.scss */
 .comment-inner .links {
-  margin-left: 1.5em;
   margin-top: 1em;
 }
 /* line 24, ../scss/_comments.scss */
@@ -561,15 +559,15 @@ input.date-clear {
 
 /******************************************** Nurani profile form ********************************************/
 /* line 182, ../scss/_forms.scss */
-#nurani-profile-wrapper {
+.profile {
   padding: 5px 15px;
 }
 /* line 185, ../scss/_forms.scss */
-#nurani-profile-wrapper .field-group-fieldset > legend {
+.profile .field-group-fieldset > legend {
   margin: 0 auto;
 }
 /* line 187, ../scss/_forms.scss */
-#nurani-profile-wrapper .field-group-fieldset > legend .fieldset-title {
+.profile .field-group-fieldset > legend .fieldset-title {
   font-size: 1.2em;
   font-family: palatino;
   font-style: italic;
@@ -577,17 +575,17 @@ input.date-clear {
   color: #005eae;
 }
 /* line 196, ../scss/_forms.scss */
-#nurani-profile-wrapper #edit-timezone--2,
-#nurani-profile-wrapper .field-group-fieldset .legend {
+.profile #edit-timezone--2,
+.profile .field-group-fieldset .legend {
   width: 450px;
 }
 /* line 199, ../scss/_forms.scss */
-#nurani-profile-wrapper .form-actions {
+.profile .form-actions {
   display: inline;
   margin-right: 10px;
 }
 /* line 203, ../scss/_forms.scss */
-#nurani-profile-wrapper .button {
+.profile .button {
   display: block;
   text-decoration: none;
   width: 88px;
@@ -763,16 +761,16 @@ body {
 
 /* fixed width and centralised Div on Basic pages and registration form */
 /* line 77, ../scss/_layout.scss */
-.node-type-page #content-inner, .page-legal #content-inner {
+.node-type-page #content-inner, .page-legal #content-inner, .page-user #content-inner {
   margin: 0 auto;
 }
 /* line 81, ../scss/_layout.scss */
-.node-type-page #content-area, .page-legal #content-area {
+.node-type-page #content-area, .page-legal #content-area, .page-user #content-area {
   background: #fff;
   padding: 0;
 }
 /* line 85, ../scss/_layout.scss */
-.node-type-page #content-area .region-content, .page-legal #content-area .region-content {
+.node-type-page #content-area .region-content, .page-legal #content-area .region-content, .page-user #content-area .region-content {
   padding: 10px 40px 0 40px;
   text-align: left;
 }
@@ -1001,9 +999,10 @@ body.front .panel-2col .panel-col-first .view-id-nurani_discussions > .view-cont
   border-top: 5px;
   border-top-style: solid;
   border-top-color: #4c1313;
-  height: 27em;
+  float: left;
+  padding: 0 2em 2em 2em;
 }
-/* line 95, ../scss/pages/_page-front.scss */
+/* line 96, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-first .view-id-nurani_discussions .view-empty {
   background-color: #fff;
   margin-bottom: 25px;
@@ -1012,7 +1011,7 @@ body.front .panel-2col .panel-col-first .view-id-nurani_discussions .view-empty 
   border-top-color: #4c1313;
   padding: 35px;
 }
-/* line 103, ../scss/pages/_page-front.scss */
+/* line 104, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-last {
   width: 42.85714%;
   float: right;
@@ -1020,20 +1019,16 @@ body.front .panel-2col .panel-col-last {
   #margin-left: -30px;
   display: inline;
 }
-/* line 105, ../scss/pages/_page-front.scss */
+/* line 106, ../scss/pages/_page-front.scss */
 body.front .panel-2col .panel-col-last .pane-content {
   background-color: #fff;
   margin-bottom: 25px;
   border-top: 5px;
   border-top-style: solid;
   border-top-color: #005eae;
+  padding: 0 2em 2em 2em;
 }
-/* line 112, ../scss/pages/_page-front.scss */
-body.front .view-nurani-discussions > .view-content .views-row {
-  clear: left;
-  padding: 10px;
-}
-/* line 116, ../scss/pages/_page-front.scss */
+/* line 115, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-field-bundle {
   width: 57.89474%;
   float: left;
@@ -1041,13 +1036,13 @@ body.front .view-nurani-discussions > .view-content .views-row .views-field-fiel
   display: inline;
   margin-top: 2em;
 }
-/* line 120, ../scss/pages/_page-front.scss */
+/* line 119, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-field-bundle span.passage {
   display: inline-block;
   padding-right: 1em;
   font-weight: bold;
 }
-/* line 127, ../scss/pages/_page-front.scss */
+/* line 126, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments, body.front .view-nurani-discussions > .view-content .views-row .views-field-view {
   width: 36.84211%;
   float: right;
@@ -1055,11 +1050,11 @@ body.front .view-nurani-discussions > .view-content .views-row .views-field-noth
   #margin-left: -30px;
   display: inline;
 }
-/* line 131, ../scss/pages/_page-front.scss */
+/* line 130, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments {
   clear: both;
 }
-/* line 135, ../scss/pages/_page-front.scss */
+/* line 134, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing a, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments a {
   font-size: 12px;
   padding: 0.5em 1.5em;
@@ -1111,14 +1106,15 @@ body.front .view-nurani-discussions > .view-content .views-row .views-field-noth
 body.front .view-nurani-discussions > .view-content .views-row .views-field-nothing a:hover, body.front .view-nurani-discussions > .view-content .views-row .views-field-new-comments a:hover {
   color: #fff;
 }
-/* line 142, ../scss/pages/_page-front.scss */
+/* line 141, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions .view-meedan-discussion-participants {
   margin-top: 23px;
 }
-/* line 144, ../scss/pages/_page-front.scss */
+/* line 143, ../scss/pages/_page-front.scss */
 body.front .view-nurani-discussions .view-meedan-discussion-participants > .view-content .views-row {
   display: inline-block;
   margin-right: -20px;
+  padding: 10px;
 }
 /* line 155, ../scss/pages/_page-front.scss */
 body.front .annotations .annotation {
